--- a/index.html
+++ b/index.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hamza Hirad's GitHub page</title>
+  <title>OUR GROUP NAME HERE's GitHub page</title>
 </head>
 <body>
 <h1>
-Hamza Hirad's GitHub Page
+OUR GROUP NAME HERE -'s GitHub Page
 </h1>
   <table border="1">
     <tr>
-      <th>Name</th>
-      <td>Hamza Hirad</td>
-    </tr>
-    <tr>
-      <th>Introduction</th>
-      <td>Hello! I am Hamza Hirad, a junior in the BS IT program. I enjoy Java and SQL</td>
-    </tr>
-    <tr>
-      <th>Hobbies</th>
-      <td>TV, software development, reading</td>
-    </tr>
+      <th>Names</th>
+      <td>PUT YOUR NAMES HERE</td>
+    </tr> 
   </table>
 </body>
 </html>
