--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ OUR GROUP NAME HERE -'s GitHub Page
   <table border="1">
     <tr>
       <th>Names</th>
-      <td>PUT YOUR NAMES HERE</td>
+      <td>Amber Carranza, </td>
     </tr> 
   </table>
 </body>
