--- a/index.html
+++ b/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>OUR GROUP NAME HERE's GitHub page</title>
+  <title>Hamza Hirad's GitHub page</title>
+ <style>
+    body {
+      text-align: center;
+      font-family: Arial, sans-serif;
+    }
+    table {
+      margin: auto;
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid black;
+      padding: 8px 12px;
+    }
+    nav a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: black;
+    }
+nav a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: blue; /* now links are blue */
+    }
+  </style>
 </head>
 <body>
 <h1>
-OUR GROUP NAME HERE -'s GitHub Page
+Hamza Hirad's GitHub Page
 </h1>
+<div style="text-align: center;">
+<nav>
+  <a href="https://hamzahd4.github.io/">Home</a> |
+  <a href="https://www.computer.org/education/code-of-ethics">Ethics</a>
+</nav>
   <table border="1">
     <tr>
-      <th>Names</th>
-      <td>Amber Carranza, </td>
-    </tr> 
+      <th>Name</th>
+      <td>Hamza Hirad</td>
+    </tr>
+    <tr>
+      <th>Introduction</th>
+      <td>Hello! I am Hamza Hirad, a junior in the BS IT program. I enjoy Java and SQL</td>
+    </tr>
+    <tr>
+      <th>Hobbies</th>
+      <td>TV, software development, reading</td>
+    </tr>
   </table>
 </body>
 </html>
