--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hamza Hirad's GitHub page</title>
+  <title>IT-304 Final Project</title>
  <style>
     body {
       text-align: center;
@@ -29,26 +29,12 @@ nav a {
 </head>
 <body>
 <h1>
-Hamza Hirad's GitHub Page
+Final Project Presentation
 </h1>
 <div style="text-align: center;">
 <nav>
   <a href="https://hamzahd4.github.io/">Home</a> |
   <a href="https://www.computer.org/education/code-of-ethics">Ethics</a>
 </nav>
-  <table border="1">
-    <tr>
-      <th>Name</th>
-      <td>Hamza Hirad</td>
-    </tr>
-    <tr>
-      <th>Introduction</th>
-      <td>Hello! I am Hamza Hirad, a junior in the BS IT program. I enjoy Java and SQL</td>
-    </tr>
-    <tr>
-      <th>Hobbies</th>
-      <td>TV, software development, reading</td>
-    </tr>
-  </table>
 </body>
 </html>
