--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>IT-304 Final Project</title>
-<style>
+  <title>privatet</title> 
+  <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -43,13 +43,18 @@
   </style>
 </head>
 <body>
-<h1>
-Final Project Presentation
-</h1>
-<div style="text-align: center;">
-<nav>
-  <a href="https://hamzahd4.github.io/">Home</a> |
-  <a href="https://www.computer.org/education/code-of-ethics">Ethics</a>
-</nav>
+
+<!-- Fix starts here -->
+<header>
+  <h1>Final Project Presentation</h1>
+  <nav>
+    <a href="https://pvt.github.io/">pvt</a> |
+    <a href="https://pvt.com">Ethics</a>
+  </nav>
+</header>
+<!-- Fix ends here -->
+
+<!-- Additional content can go here -->
+
 </body>
 </html>
