--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <header>
   <h1>Final Project Presentation</h1>
   <nav>
-    <a href="https://pvt.github.io/">pvt</a> |
-    <a href="https://pvt.com">Ethics</a>
+    <a href="index.html">Introduction</a> |
+    <a href="introduction.html">Ethics</a>
   </nav>
 </header>
 <!-- Fix ends here -->
