--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>privatet</title> 
+  <title>304 Final Project</title> 
   <style>
     body {
       margin: 0;
