--- a/ethics.html
+++ b/ethics.html
@@ -1,1 +1,63 @@
-a
+<!DOCTYPE html>
+<html>
+<head>
+  <title>304 Final Project</title> 
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    header {
+      background-color: lightgreen;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 36px;
+    }
+
+    nav {
+      margin-top: 10px;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      font-size: 20px;
+      color: blue;
+    }
+
+    table {
+      margin: auto;
+      border-collapse: collapse;
+      margin-top: 30px;
+    }
+
+    th, td {
+      border: 1px solid black;
+      padding: 8px 12px;
+    }
+  </style>
+</head>
+<body>
+
+<!-- Fix starts here -->
+<header>
+  <h1>Final Project Presentation</h1>
+  <nav>
+    <a href="index.html">Introduction</a> |
+    <a href="ethics.html">Ethics</a>
+  </nav>
+</header>
+<!-- Fix ends here -->
+
+<h2 style="text-align: left;">Ethics (Feel free to change this title)</h2>
+<p style="text-align: left;">
+  Insert info here
+</p>
+
+</body>
+</html>
