--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <h1>Final Project Presentation</h1>
   <nav>
     <a href="index.html">Introduction</a> |
-    <a href="introduction.html">Ethics</a>
+    <a href="ethics.html">Ethics</a>
   </nav>
 </header>
 <!-- Fix ends here -->
