--- a/ethics.html
+++ b/ethics.html
@@ -1,62 +1,44 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>304 Final Project</title> 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    header {
-      background-color: lightgreen;
-      padding: 20px 0;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 36px;
-    }
-
-    nav {
-      margin-top: 10px;
-    }
-
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      font-size: 20px;
-      color: blue;
-    }
-
-    table {
-      margin: auto;
-      border-collapse: collapse;
-      margin-top: 30px;
-    }
-
-    th, td {
-      border: 1px solid black;
-      padding: 8px 12px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Ethics</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Ethical Compass in Technology</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="ethics.html" class="active">Ethics</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Guidelines for Responsible Innovation</h2>
+            <p>IT Ethics
+Ethics in Information Technology is an area of concern that addresses the moral responsibilities of individuals working in the field. This includes software developers, data scientists, and IT professionals who must navigate various ethical dilemmas in their work. Upholding ethical standards is vital for maintaining public trust, ensuring user privacy, and fostering a healthy digital environment.
+Guidelines for Developers </p>
+<p>Developers play the most significant role in shaping the technology field. They have to ensure their work aligns with ethical standards, they should follow these guidelines</p>
+<ol>
+<li>Privacy and Data Protection: Developers must prioritize user privacy by ensuring secure coding practices. Sensitive data should be stored safely and transmitted with encryption.</li>
 
+<li>Quality and Maintenance: Write understandable, and great quality code.</li>
 
-  <h1>Final Project Presentation</h1>
-  <nav>
-    <a href="index.html">Introduction</a> |
-    <a href="ethics.html">Ethics</a>
-  </nav>
-</header>
+<li>Fair Practices: Need to create inclusive software that is accessible to people with disabilities.</li>
 
+<li>Avoiding Bias: Developers should recognize biases that may come in algorithms and decision-making processes. This includes being aware of how their code can unintentionally come off as discrimination.</li>
 
-<h2 style="text-align: left;">Ethics (Feel free to change this title)</h2>
-<p style="text-align: left;">
-  Insert info here
-</p>
+<li>Transparency with Data Usage: Be clear about how user data is collected, used, and shared. Users should be informed about their rights with their data.</li>
 
+<li>Intellectual Property: Respect copyright laws and intellectual property rights. Ensure that all code libraries and assets used are licensed appropriately.</li>
+
+<li>Source: IEEE Code of Ethics</li> </ol>
+
+        </section>
+    </main>
 </body>
 </html>
