--- a/index.html
+++ b/index.html
@@ -1,60 +1,28 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>304 Final Project</title> 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    header {
-      background-color: lightgreen;
-      padding: 20px 0;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 36px;
-    }
-
-    nav {
-      margin-top: 10px;
-    }
-
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      font-size: 20px;
-      color: blue;
-    }
-
-    table {
-      margin: auto;
-      border-collapse: collapse;
-      margin-top: 30px;
-    }
-
-    th, td {
-      border: 1px solid black;
-      padding: 8px 12px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Welcome to the Technolgy & Ethics Zone</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="ethics.html">Ethics</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Step Into the World of Tech & Ethics</h2>
+            <p>Explore the intersection of innovation and responsibility. This is your gateway to understanding how modern technology affects the digital world and our everyday lives.We as IT professinals and students have a responsibility to protect information, make decisons based off security, and to be fair and inclusive. We also have to be accountable for our actions when working with people and understanding our part in the IT world.We always have to think abour the human aspects of IT and that includes our responsibility to helping others and keeping our morals in check. Ethics are what make the world a better place!</p>
 
-<!-- Fix starts here -->
-<header>
-  <h1>Final Project Presentation</h1>
-  <nav>
-    <a href="index.html">Introduction</a> |
-    <a href="ethics.html">Ethics</a>
-  </nav>
-</header>
-<!-- Fix ends here -->
-
-<!-- Additional content can go here -->
-
+<p>Source: https://www.berks.edu/importance-of-ethics-in-information-technology/ </p>
+        </section>
+    </main>
 </body>
 </html>
