--- a/ethics.html
+++ b/ethics.html
@@ -13,6 +13,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ethics.html" class="active">Ethics</a></li>
+                <li><a href="Stakeholders.html" class="active">Stakeholders</a></li>
+
             </ul>
         </nav>
     </header>
