--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="ethics.html">Ethics</a></li>
+                <li><a href="Stakeholders.html" class="active">Stakeholders</a></li>
+
             </ul>
         </nav>
     </header>
