--- a/Stakeholders.html
+++ b/Stakeholders.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Ethical Compass in Technology</h1>
+        <h1>Stakeholders & Their Technology</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
