--- a/ethics.html
+++ b/ethics.html
@@ -3,44 +3,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ethics</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Ethical Compass in Technology</h1>
+        <h1>Welcome to the Technolgy & Ethics Zone</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="ethics.html" class="active">Ethics</a></li>
-                <li><a href="Stakeholders.html" class="active">Stakeholders</a></li>
-
+                <li><a href="index.html" >Home</a></li>
+                <li><a href="example1.html">Examples</a></li>
+                <li><a href="ethics.html"class="active">Ethical Lenses</a></li>
+                <li><a href="ethical_analysis.html">Ethical Analysis</a></li>
+                <li><a href="Stakeholders.html" >Stakeholders</a></li>
+                <li><a href="workscited.html">Works Cited</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Guidelines for Responsible Innovation</h2>
-            <p>IT Ethics
-Ethics in Information Technology is an area of concern that addresses the moral responsibilities of individuals working in the field. This includes software developers, data scientists, and IT professionals who must navigate various ethical dilemmas in their work. Upholding ethical standards is vital for maintaining public trust, ensuring user privacy, and fostering a healthy digital environment.
-Guidelines for Developers </p>
-<p>Developers play the most significant role in shaping the technology field. They have to ensure their work aligns with ethical standards, they should follow these guidelines</p>
-<ol>
-<li>Privacy and Data Protection: Developers must prioritize user privacy by ensuring secure coding practices. Sensitive data should be stored safely and transmitted with encryption.</li>
+            
+          <div style="display: flex; align-items: flex-start;">
+            <div style="flex: 1; padding-right: 20px;">
+          <h2>Step Into the World of Tech & Ethics</h2>
+             <p><em>Utilitarian Ethical Lens</em></p>
 
-<li>Quality and Maintenance: Write understandable, and great quality code.</li>
+  <p>These principles were viewed for analysis of CHATGPT's impacts on society. It is imperative this technology is programmed ethically for the overall well-being of society.</p>
+  <div style="text-align: center; margin: 20px 0;">
+    <img src="https://media.istockphoto.com/id/2181750211/vector/businessman-push-scale-of-justice-from-falling.jpg?s=612x612&w=0&k=20&c=0UVIe8-BFGCXcElv1KBpkY09tvbaLUHoRfK7NDlTeD8=" 
+         alt="First image" 
+         style="width: 400px; max-width: 90%; height: auto;">
+  </div>
 
-<li>Fair Practices: Need to create inclusive software that is accessible to people with disabilities.</li>
+  <p>General Ethical Principle in the ACM code of ethics: A computing professional should contribute to society and to human well-being, acknowledging that all people are stakeholders in computing.</p>
 
-<li>Avoiding Bias: Developers should recognize biases that may come in algorithms and decision-making processes. This includes being aware of how their code can unintentionally come off as discrimination.</li>
+  <p><em>Ethical Implications for CHATGPT</em></p>
 
-<li>Transparency with Data Usage: Be clear about how user data is collected, used, and shared. Users should be informed about their rights with their data.</li>
+  <ul>
+    <li>Developer Bias</li>
+    <li>Privacy</li>
+    <li>Safety</li>
+    <li>Copy Infringement</li>
+    <li>Cheating & Plagiarism</li>
+  </ul>
 
-<li>Intellectual Property: Respect copyright laws and intellectual property rights. Ensure that all code libraries and assets used are licensed appropriately.</li>
+  <p>Fairness and transparency built into this technology will bring a positive impact for society.</p>
 
-<li>Source: IEEE Code of Ethics</li> </ol>
+  <p>Tips on ethical computing use from 
+    <a href="https://www.acm.org/code-of-ethics" target="_blank">https://www.acm.org/code-of-ethics</a>:
+  </p>
 
-        </section>
+  <ul>
+    <li>Be Honest & Trustworthy</li>
+    <li>Avoid Harm</li>
+    <li>Honor Confidentiality</li>
+    <li>Use Your Skills for Positive Outcomes</li>
+  </ul>
+
+  <p>It is pertinent for computing professionals to uphold and maintain integrity. 💻</p>   
+  
+  <div style="text-align: center; margin: 20px 0;">
+    <img src="erhicalgptimage.png" 
+         alt="Second image" 
+         style="width: 400px; max-width: 90%; height: auto;">
+  </div>
+">
+
+
+</section>
     </main>
 </body>
 </html>
