--- a/Stakeholders.html
+++ b/Stakeholders.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Stakeholders</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <h1>Stakeholders & Their Technology</h1>
+        <h1>Ethical Analysis & Social Implications</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="ethics.html" class="active">Ethics</a></li>
-                <li><a href="Stakeholders.html" class="active">Stakeholders</a></li>
+                <li><a href="example1.html">Examples</a></li>
+                <li><a href="ethics.html">Ethical Lenses</a></li>
+                <li><a href="ethical_analysis.html" class="active">Ethical Analysis</a></li>
+                <li><a href="Stakeholders.html">Stakeholders</a></li>
+                <li><a href="workscited.html">Works Cited</a></li>
+                
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Stakeholders</h2>
-            <p>IT Ethics
-Ethics in Information Technology is an area of concern that addresses the moral responsibilities of individuals working in the field. This includes software developers, data scientists, and IT professionals who must navigate various ethical dilemmas in their work. Upholding ethical standards is vital for maintaining public trust, ensuring user privacy, and fostering a healthy digital environment.
-Guidelines for Developers </p>
-<p>Developers play the most significant role in shaping the technology field. They have to ensure their work aligns with ethical standards, they should follow these guidelines</p>
-<ol>
-<li>Privacy and Data Protection: Developers must prioritize user privacy by ensuring secure coding practices. Sensitive data should be stored safely and transmitted with encryption.</li>
 
-<li>Quality and Maintenance: Write understandable, and great quality code.</li>
+            <div style="display: flex; align-items: flex-start;">
+                <div style="flex: 1; padding-right: 20px;">
+                    <h2>Ethical analysis and social implications: What makes the use of technology complicated and
+                        debatable?</h2>
 
-<li>Fair Practices: Need to create inclusive software that is accessible to people with disabilities.</li>
 
-<li>Avoiding Bias: Developers should recognize biases that may come in algorithms and decision-making processes. This includes being aware of how their code can unintentionally come off as discrimination.</li>
+                    <p>What makes the use of ChatGPT and AI controversial and complex is it involves many risks
+                        especially to us, we run the risk of losing our jobs, our reputation being tarnished, even our
+                        ethics going out of the window, and even critical thinking skills not being used. It threatens
+                        some of our most important human values. It is complicated due to the benefits and harm it makes
+                        it an ethical dilemma.
+                    </p>
+                    <img src="question.jpg" alt="medicine" style="width: 400px; display: block; margin: 20px auto;">
 
-<li>Transparency with Data Usage: Be clear about how user data is collected, used, and shared. Users should be informed about their rights with their data.</li>
 
-<li>Intellectual Property: Respect copyright laws and intellectual property rights. Ensure that all code libraries and assets used are licensed appropriately.</li>
 
-<li>Source: IEEE Code of Ethics</li> </ol>
+
+
 
         </section>
     </main>
 </body>
+
 </html>
