--- a/Stakeholders.html
+++ b/Stakeholders.html
@@ -3,46 +3,73 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Ethics</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1>Ethical Analysis & Social Implications</h1>
+        <h1>Stakeholders</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="example1.html">Examples</a></li>
                 <li><a href="ethics.html">Ethical Lenses</a></li>
-                <li><a href="ethical_analysis.html" class="active">Ethical Analysis</a></li>
-                <li><a href="Stakeholders.html">Stakeholders</a></li>
+                <li><a href="ethical_analysis.html">Ethical Analysis</a></li>
+                <li><a href="Stakeholders.html" class="active">Stakeholders</a></li>
                 <li><a href="workscited.html">Works Cited</a></li>
                 
+
             </ul>
         </nav>
     </header>
     <main>
         <section>
+            <h3>Who are the main audience of your ethical analysis?</h3>
+            <p>The main audience of our ethical analysis includes:</p>
+            <ul>
+                <li>Software Developers  working with AI models</li>
+                <li> Teachers and students  utilizing ChatGPT in for academic assistance and efficiency
+                </li>
+                <li> Healthcare Employees and Physicians  considering AI integration for administrative
+                    support</li>
+                <li> Business analysts and professionals  using AI to analyze data and conduct predictive
+                    charts</li>
+                <li> Policy makers and organizational leaders  deciding on AI usage guidelines and
+                    conventions</li>
+                <li> Society , especially users whose data or lives may be impacted by AI</li>
+            </ul>
 
-            <div style="display: flex; align-items: flex-start;">
-                <div style="flex: 1; padding-right: 20px;">
-                    <h2>Ethical analysis and social implications: What makes the use of technology complicated and
-                        debatable?</h2>
+            <h3>Why should they care, and what should they do?</h3>
+            <p>They should care because the rise of ChatGPT or generative AI is already changing how we work, learn,
+                and communicate. While the technology has great benefits like increased efficiency and automation, it
+                also introduces serious ethical concerns:</p>
+            <ul>
+                <li> Job displacement  due to automation</li>
+                <li> Privacy concerns  in data use</li>
+                <li> Plagiarism and cheating  in school</li>
+                <li> Bias in AI output  from training limitations</li>
+                <li> Loss of critical thinking skills  with overuse</li>
+                <li> Unclear responsibility  in decision-making</li>
+            </ul>
 
-
-                    <p>What makes the use of ChatGPT and AI controversial and complex is it involves many risks
-                        especially to us, we run the risk of losing our jobs, our reputation being tarnished, even our
-                        ethics going out of the window, and even critical thinking skills not being used. It threatens
-                        some of our most important human values. It is complicated due to the benefits and harm it makes
-                        it an ethical dilemma.
-                    </p>
-                    <img src="question.jpg" alt="medicine" style="width: 400px; display: block; margin: 20px auto;">
-
-
-
-
-
+            <p>Using a  utilitarian ethical lens , we recommend all stakeholders ensure that ChatGPT
+                serves the greatest good. Here's what each group can do:</p>
+            <ul>
+                <li> Developers:  Minimize bias, protect user data, and ensure transparency in AI design.
+                </li>
+                <li> Educators:  Encourage responsible AI use as a support tool—not a replacement for
+                    learning.</li>
+                <li> Businesses:  Apply AI ethically, ensuring human oversight and avoiding full reliance
+                    on automation.</li>
+                <li> Policy makers:  Enforce regulations that protect users and promote fair, ethical AI
+                    integration.</li>
+                <li>  End users:  Stay informed, question AI output, and use it as a tool—not a crutch.
+                </li>
+            </ul>
+            <h3>What are  recommendations to the stakeholders who use and deploy the proposed technology?</h3>
+            <p>I recommend that stakeholders take action by creating policies that protect people whose jobs are most at risk because of new technology, especially AI. There should be rules that require companies to make sure they aren’t just replacing workers without thinking about the consequences. Sectors like customer service, which rely heavily on human workers, should be given attention. Companies should be asked to offer training, support, or even new opportunities to workers whose jobs might be taken over by AI systems.Business owners, engineers, and AI developers should also take some responsibility. They should work together with the government and local communities to find fair ways to introduce AI without causing huge problems for workers, especially older ones. Older workers often have a harder time adapting to big changes, and the economic impact on them has already been pretty harsh. This needs to be taken seriously.Overall, everyone involved including citizens should remember that while AI can bring a lot of advancements and save money, it can also create real problems for everyday people. We need to make sure AI helps improve lives, not just business profits. Thinking ahead and protecting vulnerable workers should be a major part of any plan to bring in new technology, not something we worry about after the damage is done.
+            </p>
 
         </section>
     </main>
