--- a/Stakeholders.html
+++ b/Stakeholders.html
@@ -39,23 +39,15 @@
                 <li> Policy makers and organizational leaders  deciding on AI usage guidelines and
                     conventions</li>
                 <li> Society , especially users whose data or lives may be impacted by AI</li>
-            </ul>
+            
 
             <h3>Why should they care, and what should they do?</h3>
             <p>They should care because the rise of ChatGPT or generative AI is already changing how we work, learn,
-                and communicate. While the technology has great benefits like increased efficiency and automation, it
-                also introduces serious ethical concerns:</p>
-            <ul>
-                <li> Job displacement  due to automation</li>
-                <li> Privacy concerns  in data use</li>
-                <li> Plagiarism and cheating  in school</li>
-                <li> Bias in AI output  from training limitations</li>
-                <li> Loss of critical thinking skills  with overuse</li>
-                <li> Unclear responsibility  in decision-making</li>
-            </ul>
+                and communicate.</p>
+
 
             <p>Using a  utilitarian ethical lens , we recommend all stakeholders ensure that ChatGPT
-                serves the greatest good. Here's what each group can do:</p>
+                serves the greatest good. </p>
             <ul>
                 <li> Developers:  Minimize bias, protect user data, and ensure transparency in AI design.
                 </li>
