--- a/Stakeholders.html
+++ b/Stakeholders.html
@@ -39,6 +39,12 @@
                 <li> Policy makers and organizational leaders  deciding on AI usage guidelines and
                     conventions</li>
                 <li> Society , especially users whose data or lives may be impacted by AI</li>
+
+                 <div style="text-align: right; margin: 20px 0;">
+    <img src="stakeholderimage.jpg" 
+         alt="First image" 
+         style="width: 400px; max-width: 90%; height: auto;">
+  </div>
             
 
             <h3>Why should they care, and what should they do?</h3>
