--- a/Stakeholders.html
+++ b/Stakeholders.html
@@ -45,7 +45,8 @@
             <h3>Why should they care, and what should they do?</h3>
             <p>They should care because the rise of ChatGPT or generative AI is already changing how we work, learn,
                 and communicate.</p>
-
+                
+                                          <img src="Stakeholderimage.jpg" alt="Stakeholder Image" /> 
 
             <p>Using a  utilitarian ethical lens , we recommend all stakeholders ensure that ChatGPT
                 serves the greatest good. </p>
